dev/Service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: fe-root
  name: fe-root
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 5173
  - name: https
    protocol: TCP
    port: 443
    targetPort: 5173
  selector:
    app: fe-root
  type: LoadBalancer
status:
  loadBalancer: {}
