dev/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fe-root
  namespace: devops
spec:
  host: mwanina-devops.apps.stgocp.mwanitest.local
  to:
    kind: Service
    name: fe-root
    weight: 100
  port:
    targetPort: 5173
  tls:
    termination: edge
  wildcardPolicy: None
